# tape-archiving

./: README.md  pyproject.toml  step_by_step.md
configs/: example-jetraw.yaml  example-plain.yaml
src/tape_archive/: archive_builder.py  catalog_html.py  cli.py  compress.py  config.py  ingest.py  jetraw.py  master_html.py  mirror.py  pipeline.py  plan.py  plan_html.py  planner_ui.py  proc.py  rclone.py  restore.py  scan.py  serve.py  ship.py
