[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tape-archive"
version = "0.1.0"
description = "Move jetraw-compressed data from EPFL NAS RCP to SCITAS tape"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
tape-archive = "tape_archive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
